infra/tutorial/echo_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - echo1.rkotcher.me
      - echo2.rkotcher.me
      secretName: echo-tls
  rules:
  - host: echo1.rkotcher.me
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.rkotcher.me
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
